<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="date_time_12_hour_sample">1:00 PM</string>
    <string name="date_time_24_hour_sample">13:00</string>
    <string name="auto_silent_mode">Auto silent mode</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="airplane_mode">Flight mode</string>
    <string name="airplane_mode_summary">Disable all wireless connections</string>
    <string name="date_and_time_settings_title">Date and time</string>
    <string name="date_time_auto">Automatic</string>
    <string name="date_time_auto_summaryOn">Use network-provided values</string>
    <string name="date_time_auto_summaryOff">Use network-provided values</string>
    <string name="date_time_24hour">Use 24-hour format</string>
    <string name="date_time_set_time">Set time</string>
    <string name="date_time_set_timezone">Select time zone</string>
    <string name="date_time_set_date">Set date</string>
    <string name="date_time_date_format">Select date format</string>
    <string name="bluetooth_settings_title">Bluetooth settings</string>
    <string name="bluetooth_settings_summary">Manage connections, set device name, and visibility</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">Use Near Field Communication to read and exchange tags</string>
    <string name="wifi_settings">WLAN settings</string>
    <string name="wifi_settings_summary">Set up and manage wireless access points</string>
    <string name="wifi_direct_summary">Connect to other devices via WLAN Direct</string>
    <string name="wifi_direct_settings_titlebar">WLAN Direct settings</string>
    <string name="sound_settings_title">Sound</string>
    <string name="display_settings_title">Display</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="silent_mode_summary">No sounds except media and alarms</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="ringtone_summary" />
    <string name="all_volume_title">Volume</string>
    <string name="ring_volume_summary" />
    <string name="vibrate_title">Vibration</string>
    <string name="vibrate_summary">Vibration for incoming calls and notifications</string>
    <string name="notification_sound_title">Notification ringtone</string>
    <string name="notification_sound_summary">Set your default notification ringtone</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_pulse_summary">Pulse trackball light repeatedly for new notifications</string>
    <string name="dtmf_tone_enable_title">Audible touch tones</string>
    <string name="dtmf_tone_enable_summary_on">Play tones when using dial pad</string>
    <string name="dtmf_tone_enable_summary_off">Play tones when using dial pad</string>
    <string name="sound_effects_enable_title">Audible selection</string>
    <string name="sound_effects_enable_summary_on">Play sound when making screen selection</string>
    <string name="sound_effects_enable_summary_off">Play sound when making screen selection</string>
    <string name="lock_sounds_enable_title">Screen lock sounds</string>
    <string name="lock_sounds_enable_summary_on">Play sounds when locking and unlocking the screen</string>
    <string name="lock_sounds_enable_summary_off">Play sounds when locking and unlocking the screen</string>
    <string name="haptic_feedback_enable_title">Haptic feedback</string>
    <string name="haptic_feedback_enable_summary_on">Vibrate when soft keys are pressed and on certain UI interactions</string>
    <string name="haptic_feedback_enable_summary_off">Vibrate when soft keys are pressed and on certain UI interactions</string>
    <string name="animations_title">Animation</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="accelerometer_summary_on">Switch orientation automatically when rotating phone</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_summary">Adjust the brightness of the screen</string>
    <string name="screen_timeout">Screen time-out</string>
    <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="tether_settings_title_usb">Tethering</string>
    <string name="tether_settings_summary_usb">"Share your phone's mobile data connection via USB"</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="network_settings_summary">Set options for roaming, networks, APNs</string>
    <string name="location_title">My location</string>
    <string name="location_network_based">Use wireless networks</string>
    <string name="location_networks_disabled">See location in applications (such as Maps) using wireless networks</string>
    <string name="location_neighborhood_level">Location determined by WLAN and/or mobile networks</string>
    <string name="location_gps">Use GPS satellites</string>
    <string name="location_street_level">Location accurate to street level</string>
    <string name="location_gps_disabled">Locate to street-level (requires more battery plus view of sky)</string>
    <string name="location_pdr">Use sensor aiding</string>
    <string name="location_use_pdr">Enhance positioning and save power using sensors</string>
    <string name="location_use_pdr_off">Enhance positioning and save power using sensors</string>
    <string name="tts_settings_title">Text-to-speech settings</string>
    <string name="use_default_tts_settings_title">Always use my settings</string>
    <string name="use_default_tts_settings_summary">Default settings below override application settings</string>
    <string name="tts_default_settings_section">Default settings</string>
    <string name="tts_default_synth_title">Default engine</string>
    <string name="tts_default_synth_summary">Sets the speech synthesis engine to be used for spoken text</string>
    <string name="tts_default_rate_title">Speech rate</string>
    <string name="tts_default_rate_summary">Speed at which the text is spoken</string>
    <string name="tts_default_lang_title">Language</string>
    <string name="tts_default_lang_summary">Sets the language-specific voice for the spoken text</string>
    <string name="tts_play_example_title">Listen to an example</string>
    <string name="tts_play_example_summary">Play a short demonstration of speech synthesis</string>
    <string name="tts_install_data_title">Install voice data</string>
    <string name="tts_install_data_summary">Install the voice data required for speech synthesis</string>
    <string name="tts_engines_section">Engines</string>
    <string name="vpn_settings_title">VPN settings</string>
    <string name="vpn_settings_summary">Set up and manage Virtual Private Networks (VPNs)</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="emergency_tone_summary">Set function when emergency call is placed</string>
    <string name="sound_category_sound_title">General</string>
    <string name="sound_category_calls_title">Incoming calls</string>
    <string name="sound_category_notification_title">Notifications</string>
    <string name="sound_category_feedback_title">Feedback</string>
    <string name="driving_mode_title">Driving mode</string>
    <string name="driving_mode_summary">Incoming calls and new notifications will be read out automatically</string>
    <string name="vibration_intensity">Vibration intensity</string>
    <string name="vibration_intensity_summary">Set your touch feedback vibration intensity</string>
    <string name="tvout_settings_title">TV out</string>
    <string name="tv_out_summary">TV out settings</string>
    <string name="display_saving">Auto adjust screen power</string>
    <string name="display_saving_mode_summary">Save power by analyzing image and adjusting LCD brightness</string>
    <string name="wireless_synchronise_title">Synchronise</string>
    <string name="wireless_synchronise_summary">Synchronise data with servers and set sync profiles</string>
    <string name="g_sensor_title">Gyro sensor calibration</string>
    <string name="g_sensor_summary">Gyro sensor calibration</string>
    <string name="a_sensor_title">Horizontal calibration</string>
    <string name="a_sensor_summary">Calibrate horizontally using accelerometer</string>
    <string name="driving_mode_settings_title">Driving mode settings</string>
    <string name="driving_mode_settings_summary">Select applications to use TTS while Driving mode is on</string>
    <string name="incoming_call">Incoming call</string>
    <string name="incoming_call_notification_summary">"Read out callers' information when receiving incoming calls"</string>
    <string name="message">Message</string>
    <string name="message_notification_summary">"Read out senders' information when new messages arrive"</string>
    <string name="new_email">New emails</string>
    <string name="new_email_notification_summary">Read out number of new emails received</string>
    <string name="new_voicemail">New voicemail</string>
    <string name="new_voicemail_notification_summary">Notify when new voice mail arrives</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_notification_summary">Read out alarm information when alarms sound</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_notification_summary">Read out scheduled alarm information when alarms sound</string>
    <string name="unlock_screen">Unlock screen</string>
    <string name="unlock_screen_contents_summary">Read out information about time, missed calls, and unread message information on unlock screen when screen turns on</string>
    <string name="kies_via_wifi">Kies via WLAN</string>
    <string name="kies_via_wifi_summary">Connect to Kies via WLAN</string>
    <string name="usb_utility_title">USB utilities</string>
    <string name="usb_utility_summary">Set USB cable connection mode</string>
    <string name="screen_mode_setting">Screen mode</string>
    <string name="screen_mode_summary">Select the screen mode</string>
    <string name="touch_key_light">Touch key light duration</string>
    <string name="screen_display">Screen display</string>
    <string name="wimax_settings">4G settings</string>
    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
    <string name="power_saving_mode">Power saving mode</string>
    <string name="use_power_saving_mode_title">Use Power saving mode</string>
    <string name="use_power_saving_mode_summary">Switch to Power saving mode automatically when battery is low</string>
    <string name="power_saving_mode_on_title">Power saving mode on at</string>
    <string name="power_saving_mode_on_summary">%s battery power</string>
    <string name="power_saving_mode_setting">Power saving mode settings</string>
    <string name="nonuse_wifi_title">Turn off WLAN</string>
    <string name="nonuse_wifi_summary">Turn off WLAN when not connected with mobile AP</string>
    <string name="nonuse_bluetooth_title">Turn off Bluetooth</string>
    <string name="nonuse_bluetooth_summary">Turn off Bluetooth when not in use</string>
    <string name="nonuse_gps_title">Turn off GPS</string>
    <string name="nonuse_gps_summary">Turn off GPS when not in use</string>
    <string name="nonuse_sync_title">Turn off Sync</string>
    <string name="nonuse_sync_summary">Turn off Sync when phone is not synchronising with server</string>
    <string name="nonuse_brightness_summary">Adjust brightness of screen</string>
    <string name="adjust_brightness_summary">%s brightness</string>
    <string name="screentimeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="power_saving_tips">Power saving tips</string>
</resources>