<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/date_and_time_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/date_time_auto" android:key="auto_time" android:summaryOn="@string/date_time_auto_summaryOn" android:summaryOff="@string/date_time_auto_summaryOff" />
    <Preference android:title="@string/date_time_set_date" android:key="date" android:summary="03/10/2008" />
    <PreferenceScreen android:title="@string/date_time_set_timezone" android:key="timezone" android:summary="GMT-8:00" />
    <Preference android:title="@string/date_time_set_time" android:key="time" android:summary="12:00am" />
    <CheckBoxPreference android:title="@string/date_time_24hour" android:key="24 hour" android:summaryOn="@string/date_time_24_hour_sample" android:summaryOff="@string/date_time_12_hour_sample" />
    <ListPreference android:title="@string/date_time_date_format" android:key="date_format" android:summary="mm/dd/yyyy" />
</PreferenceScreen>
